--- a/_includes/resume/skills.liquid
+++ b/_includes/resume/skills.liquid
@@ -11,20 +11,24 @@
             {% else %}
               <td class="list-group-category-icon"></td>
             {% endif %}
-            <!-- Calculate colspan number for category title -->
-            {% assign i = 1 %}
-            {% for item in content.items %}
-              {% assign i = i | plus: 1 %}
-            {% endfor %}
-            <td colspan="{{ i }}" class="list-group-category">{{ content.name }}</td>
+            <td colspan="99" class="list-group-category">{{ content.name }}</td>
           </tr>
-          {% for item in content.keywords %}
+
+          {% for category in content.categories %}
+            <!-- 小分類標題 -->
             <tr>
               <td></td>
-              <td class="list-group-name">
-                <b>{{ item }}</b>
+              <td class="list-group-subcategory" colspan="99">
+                <b>{{ category.title }}</b>
               </td>
             </tr>
+            <!-- 小分類內的項目 -->
+            {% for item in category.items %}
+              <tr>
+                <td></td>
+                <td class="list-group-name">{{ item }}</td>
+              </tr>
+            {% endfor %}
           {% endfor %}
         </tbody>
       </table>
