--- a/_sass/_cv.scss
+++ b/_sass/_cv.scss
@@ -218,3 +218,23 @@ ul.timeline li::before {
      color: var(--global-text-color);
 }
 */
+
+.btn.btn-custom {
+  color: var(--global-card-bg-color) !important;
+  background-color: var(--global-theme-color) !important;
+  border: none;
+}
+
+.icon-text {
+  display: flex;
+  align-items: center; /* 垂直置中 */
+  gap: 8px; /* icon 與文字的間距 */
+}
+.icon-text i {
+  width: 20px; /* 統一icon區域寬度 */
+  text-align: center;
+}
+
+.text-color-custom {
+  color: var(--global-theme-color) !important
+}
