--- a/_includes/projects_horizontal.liquid
+++ b/_includes/projects_horizontal.liquid
@@ -3,13 +3,14 @@
     <div class="card h-100 hoverable">
       <div class="row no-gutters">
         {% if project.img %}
-          <div class="col-md-6">
+          <div class="col-md-3">
+            <span class="badge bg-secondary">{{ project.paper }}</span>
             {% include figure.liquid loading="eager" path=project.img sizes="(min-width: 768px) 156px, 50vw" alt="project thumbnail" class="card-img" %}
           </div>
         {% endif %}
-        <div class="{% if project.img %}col-md-6{% else %}col-md-12{% endif %}">
+        <div class="{% if project.img %}col-md-9{% else %}col-md-12{% endif %}">
           <div class="card-body">
-            <h3 class="card-title">{{ project.title }}</h3>
+            <h4 class="card-title">{{ project.title }}</h4>
             <p class="card-text">{{ project.description }}</p>
             <div class="row ml-1 mr-1 p-0">
               {% if project.github %}
